Wed Mar 13 20:50:00 2002  Si Mong Park  <spark@ociweb.com>

        * ace/OS.i:
          Minor change to resolve signed/unsigned comparison warning.

        * ace/OS_String.h:
        * ace/OS_String.inl:
        * ace/OS_String.cpp:
          Added wide-char version of strtok_r and strtok_r_emulation.

        * ace/Functor.h:
        * ace/Functor.i:
          Added hash related templates for ACE_ANTI_TCHAR type
          when ACE_USES_WCHAR is defined.

        * ace/ace_dll.vcp:
        * ace/ace_os_dll.vcp: Added missing files.

Wed Mar 13 11:57:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/Configuration_Import_Export.cpp: Replace ACE_ASSERTs with
          validity checks that set errno and return -1. ACE_ASSERT is
          a little too drastic for a simple error, and the ACE_ASSERT
          check is removed altogether when building with ACE_NDEBUG.

Wed Mar 13 10:36:02 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/config-freebsd-pthread.h: Fix test for POSIX RT signals.

Wed Mar 13 10:21:49 2002  Steve Huston  <shuston@riverace.com>

        * ace/Configuration_Import_Export.cpp (ACE_Ini_ImpExp::import_config):
          Remove the "else value = ACE_LIB_TEXT("")" for zero-length
          values - value is already a zero-length string.

Wed Mar 13 09:40:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Registry_Name_Space.cpp:
          Fixed warnings about unused variables in BCB Unicode build

Tue Mar 12 18:37:49 2002  Steve Huston  <shuston@riverace.com>

        * ace/Configuration_Import_Export.{h cpp} (ACE_Ini_ImpExp):
          Changed behavior of ACE_Ini_ImpExp::import_config() to take
          the entire string, with or without whitespace, without requiring
          quotes around the string. This puts functionality on par with
          regular Windows INI files.

          Also, on ACE_Ini_ImpExp::export_config(), don't add quotes to
          string values that are exported. import_config() will still read