@@ -1,3 +1,8 @@
+Wed Mar 13 15:55:54 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
+
+	* ace/OS.h: EACCESS was misspelled!  Thanks to Eric Eide
+ 	  <eeide@cs.utah.edu> for reporting this.
+
 Wed Mar 13 20:50:00 2002  Si Mong Park  <spark@ociweb.com>
 
         * ace/OS.i:
