@@ -1476,6 +1476,7 @@ Val Dumiterscu <val.dumitrescu@am-beo.com>
 Oleg Kraynov <olegvkr@yahoo.com>
 Stephan Gudmundson <stephang@netacquire.com>
 Frank Kuhlman <kuhlmann@materna.de>
+Sorin Iordachescu <sorin.iordachescu@am-beo.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
